# GraspDataGen

./: .gitignore  AGENTS.md  TODO.md  inspect_usd.py  pyproject.toml  summarize_usd_gripper.py  use.md
bots/: changingtek_ag2f120s.usd  changingtek_ag2f90.usd  franka_panda.usd  galaxea_g1.usd  inspire_eg2_4c2.usd  jodell_rg75.usd  omnipicker.usd  piper_h_v1_gripper.usd  piper_l_v1_gripper.usd  piper_v1_gripper.usd  piper_v2_gripper.usd  piper_x_v1_gripper.usd  robot_g1_120s_gripper.usd  robot_g1_omnipicker_gripper.usd  robot_g2_90d_gripper.usd  robot_g2_omnipicker_gripper.usd  robot_g2_place_workpiece_gripper.usd  robotiq_85.usd
objects/: datagen_example.json  graspgen_example.json  plate.json
scripts/graspgen/: create_gripper_lab.py  datagen.py  grasp_guess.py  grasp_sim.py  gripper.py  gripper_configurations.py  warp_kernels.py
scripts/graspgen/tools/: batch_datagen_grippers.py  extract_piper_gripper_usd.py
